# xav

./: .gitignore  .rustfmt.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  build.sh  build_all_static.sh  build_dynamic.sh
.cargo/: config.toml  config.toml.dynamic  config.toml.static
src/: audio.rs  chunk.rs  ffms.rs  interp.rs  main.rs  noise.rs  progs.rs  scd.rs  svt.rs  tq.rs  vship.rs  zimg.rs
